[project]
name = "discordbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.5.2",
    "gradio-client>=1.12.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.4",
    "openai>=1.99.9",
    "openai-agents[litellm]>=0.2.8",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]
